fix: consistent filter field sizes (search 300px, select 200px) and trainings tab top spacing

--- a/apps/ui/src/app/players/components/player-search/player-search.component.scss
+++ b/apps/ui/src/app/players/components/player-search/player-search.component.scss
@@ -9,7 +9,7 @@
 }
 
 .search-field {
-  width: 400px;
+  width: 300px;
 }
 
 .position-field {
