--- a/apps/ui/src/app/tournaments/components/tournament-search/tournament-search.component.scss
+++ b/apps/ui/src/app/tournaments/components/tournament-search/tournament-search.component.scss
@@ -9,7 +9,7 @@
 }
 
 .filter-field {
-  width: 180px;
+  width: 200px;
 }
 
 .search-field {
