--- a/apps/ui/src/app/trainings/components/session-list/session-list.component.scss
+++ b/apps/ui/src/app/trainings/components/session-list/session-list.component.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   gap: 12px;
-  padding: 0;
+  
 }
 
 .sessions-table {
