--- a/apps/ui/src/app/trainings/components/trainings-layout/trainings-layout.component.scss
+++ b/apps/ui/src/app/trainings/components/trainings-layout/trainings-layout.component.scss
@@ -3,5 +3,5 @@
 }
 
 mat-tab-nav-panel {
-  padding-top: 16px;
+  padding-top: 24px;
 }
