--- a/apps/ui/src/app/trips/components/trip-search/trip-search.component.scss
+++ b/apps/ui/src/app/trips/components/trip-search/trip-search.component.scss
@@ -8,6 +8,10 @@
   flex-wrap: wrap;
 }
 
+.search-field {
+  width: 300px;
+}
+
 .filter-field {
   width: 200px;
 }
