--- a/apps/ui/src/app/users/components/user-search/user-search.component.scss
+++ b/apps/ui/src/app/users/components/user-search/user-search.component.scss
@@ -1,9 +1,17 @@
-.user-search {
+.search-form {
+  margin-bottom: 4px;
+}
+
+.filters-container {
   display: flex;
   gap: 12px;
   flex-wrap: wrap;
+}
 
-  mat-form-field {
-    flex: 1 1 200px;
-  }
+.search-field {
+  width: 300px;
+}
+
+.filter-field {
+  width: 200px;
 }
